parser/tests/parser/expressions/invalid_contents/escaped_quote.mf2
{1 a \| thing}
=== spans ===
                    {1 a \| thing}
Pattern             ^^^^^^^^^^^^^^
LiteralExpression   ^^^^^^^^^^^^^^
Number               ^
Number.integral      ^
=== diagnostics ===
Unrecognized placeholder contents (at @3..13)
  {1 a \| thing}
     ^^^^^^^^^^
=== ast ===
Pattern {
    parts: [
        LiteralExpression {
            span: @0..14,
            literal: Number {
                start: @1,
                raw: "1",
                is_negative: false,
                integral_len: 1,
                fractional_len: None,
                exponent_len: None,
            },
            annotation: None,
            attributes: [],
        },
    ],
}